--- a/intro.html
+++ b/intro.html
@@ -27,7 +27,10 @@
       <li>item 7</li>
     </ol>
 
+    <ol id="list2"></ol>
+
     <button id="b">The button</button>
+    <button id="b2">Fibonacci</button>
 
     <script src="intro.js"></script>
   </body>
