Stern and Freactran added

--- a/intro.html
+++ b/intro.html
@@ -29,8 +29,11 @@
 
     <ol id="list2"></ol>
 
+    <ol id="list3"></ol>
+
     <button id="b">The button</button>
     <button id="b2">Fibonacci</button>
+    <button id="b3"> Stern and Fractran </button>
 
     <script src="intro.js"></script>
   </body>
